force-app/main/default/objects/Opportunity/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <description>Shows a link to the Experience URL value with a friendly name</description>
    <formula>HYPERLINK(Experience_URL__c ,  Interest_Description__c, &#39;Self&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Experience</label>
    <type>Text</type>
</CustomField>