force-app/main/default/objects/Opportunity/fields/Experience_URL__c.field-meta.xml
<CustomField>
    <fullName>Experience_URL__c</fullName>
    <defaultValue>&quot;https://www.linkedin.com/in/jason-snyder2/&quot;</defaultValue>
    <description>URL for LinkedIn or Trailhead</description>
    <label>Experience URL</label>
    <type>Url</type>
</CustomField>