force-app/main/default/objects/Opportunity/fields/Interest_Description__c.field-meta.xml
<CustomField>
    <fullName>Interest_Description__c</fullName>
    <description>Text description to show interest.</description>
    <label>Interest Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>